TM-11499 Fixed Button alignment on the Task Edit.

--- a/web-app/tds/web-app/css/elements/component/task-comment-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-comment-component.sass
@@ -27,10 +27,10 @@
   .single-right-btn-action
     text-align: right
     margin-right: 3px
-.k-grid-ignore-click
-  display: inline-grid
-  grid-template-columns: 70px 70px
-  margin-bottom: 5px
-  [hidden]
-    visibility: hidden
+  .k-grid-ignore-click
+    display: inline-grid
+    grid-template-columns: 45px 45px
+    margin-left: 9px
+    [hidden]
+      visibility: hidden
 
